# somfy-rpitx

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  config.example.json  config.schema.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
homebridge/: accessory.js  command-runner.js  config.js  index.js  platform.js  position-estimator.js  settings.js
homebridge/test/: command-runner.test.js  config.test.js  position-estimator.test.js
native/: somfy_rpitx_tx.cpp
packaging/: homebridge-somfy-rpitx.sudoers
src/somfy_rpitx/: __init__.py  cli.py  config.py  dryrun.py  homebridge_helper.py  modulation.py  protocol.py  pulses.py  storage.py  transmitter.py
tests/: test_cli.py  test_config.py  test_dryrun.py  test_homebridge_helper.py  test_install_layout.py  test_modulation.py  test_protocol.py  test_pulses.py  test_storage.py  test_transmitter.py  test_vendored_librpitx.py
